[package]
name = "database"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.0"
rust-argon2 = "0.8"
textnonce = "1.0"
dotenv = "0.15"
async-trait = "0.1"
tokio-postgres = "0.7"
postgres = "0.19"
deadpool-postgres = "0.9"
